TD-4648 Exporting to xelatex characters

--- a/src/Test/XeLatex/TestFiles/LinuxExpected/EMTest1.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/EMTest1.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\letData="Charis SIL" at 48pt
-\font\slotnameletData="Charis SIL" at 24pt
-\font\nameletData="Charis SIL" at 48pt
+\font\letData="Charis SIL/GR" at 48pt
+\font\slotnameletData="Charis SIL/GR" at 24pt
+\font\nameletData="Charis SIL/GR" at 48pt
 
 \mbox{} 
 \newpage 
