--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Larger.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Larger.tex
@@ -19,10 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\pa="Charis SIL" at 80pt
-\font\childapa="Charis SIL" at 120pt
-\font\childbpa="Charis SIL" at 53pt
-\font\childaenpa="Charis SIL" at 120pt
+\font\pa="Charis SIL/GR" at 80pt
+\font\childapa="Charis SIL/GR" at 120pt
+\font\childbpa="Charis SIL/GR" at 53pt
+\font\childaenpa="Charis SIL/GR" at 120pt
 
 \mbox{} 
 \newpage 
