--- a/src/Test/XeLatex/TestFiles/LinuxExpected/NestedSpan1.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/NestedSpan1.tex
@@ -20,9 +20,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Charis SIL":color=ff0000 at 32pt
-\font\tbta="Charis SIL":color=0000ff at 16pt
-\font\tctbta="Charis SIL":color=008000 at 8pt
+\font\ta="Charis SIL/GR":color=ff0000 at 32pt
+\font\tbta="Charis SIL/GR":color=0000ff at 16pt
+\font\tctbta="Charis SIL/GR":color=008000 at 8pt
 
 \mbox{} 
 \newpage 
