--- a/src/Test/XeLatex/TestFiles/LinuxExpected/DisplayNone.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/DisplayNone.tex
@@ -20,8 +20,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\a="Charis SIL":color=ff0000 at 10pt
-\font\ba="Charis SIL":color=0000ff at 16pt
+\font\a="Charis SIL/GR":color=ff0000 at 10pt
+\font\ba="Charis SIL/GR":color=0000ff at 16pt
 
 \mbox{} 
 \newpage 
