--- a/src/Test/XeLatex/TestFiles/LinuxExpected/Font1.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/Font1.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Charis SIL" at 40pt
-\font\tbta="Charis SIL" at 20pt
+\font\ta="Charis SIL/GR" at 40pt
+\font\tbta="Charis SIL/GR" at 20pt
 
 \mbox{} 
 \newpage 
