--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily6.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontFamily6.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\lettera="Charis SIL":color=ff0000 at 24pt
-\font\letterb="Charis SIL":color=0000ff at 24pt
+\font\lettera="Charis SIL/GR":color=ff0000 at 24pt
+\font\letterb="Charis SIL/GR":color=0000ff at 24pt
 
 \mbox{} 
 \newpage 
