--- a/src/Test/XeLatex/TestFiles/LinuxExpected/FontParent.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/FontParent.tex
@@ -19,8 +19,8 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\adicBody="Charis SIL":color=ff0000 at 24pt
-\font\badicBody="Charis SIL":color=0000ff at 24pt
+\font\adicBody="Charis SIL/GR":color=ff0000 at 24pt
+\font\badicBody="Charis SIL/GR":color=0000ff at 24pt
 
 \mbox{} 
 \newpage 
