--- a/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase2.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase2.tex
@@ -19,10 +19,10 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Charis SIL":color=ff0000 at 20pt
-\font\tbta="Charis SIL":color=0000ff at 20pt
-\font\tctbta="Charis SIL":color=008000 at 13pt
-\font\tdta="Charis SIL":color=ffff00 at 20pt
+\font\ta="Charis SIL/GR":color=ff0000 at 20pt
+\font\tbta="Charis SIL/GR":color=0000ff at 20pt
+\font\tctbta="Charis SIL/GR":color=008000 at 13pt
+\font\tdta="Charis SIL/GR":color=ffff00 at 20pt
 
 \mbox{} 
 \newpage 
