--- a/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase3.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase3.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Charis SIL":color=ff0000 at 20pt
-\font\tcta="Charis SIL":color=008000 at 13pt
-\font\tdtcta="Charis SIL":color=ffff00 at 13pt
+\font\ta="Charis SIL/GR":color=ff0000 at 20pt
+\font\tcta="Charis SIL/GR":color=008000 at 13pt
+\font\tdtcta="Charis SIL/GR":color=ffff00 at 13pt
 
 \mbox{} 
 \newpage 
