--- a/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase6.tex
+++ b/src/Test/XeLatex/TestFiles/LinuxExpected/NestedDivCase6.tex
@@ -19,9 +19,9 @@
 \pagestyle{plain}
 \sloppy
 \setlength{\parfillskip}{0pt plus 1fil}
-\font\ta="Charis SIL":color=ff0000 at 30pt
-\font\tbta="Charis SIL":color=0000ff at 10pt
-\font\tctbta="Charis SIL":color=008000 at 15pt
+\font\ta="Charis SIL/GR":color=ff0000 at 30pt
+\font\tbta="Charis SIL/GR":color=0000ff at 10pt
+\font\tctbta="Charis SIL/GR":color=008000 at 15pt
 
 \mbox{} 
 \newpage 
