TD-4660 Dictionary content appeared as single page

--- a/src/Test/XeLatex/TestFiles/Expected/Counter2.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Counter2.tex
@@ -45,6 +45,6 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\sensebeforearticlesectionletter{1.0.0}\sensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{N-Count}\definitionfirstoftypelastoftypesensearticlesectionletter{A }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitress}\definitionfirstoftypelastoftypesensearticlesectionletter{ is a woman who works in a restaurant, serving people with food and drink.}\sensebeforearticlesectionletter{1.0.0}\sensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{wait}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ress}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ing}\examplefirstoftypelastoftypesubentryarticlesectionletter{She does a bit of waitressing as a part-time job.}\section*{\needspace {8\baselineskip}{\firstoftypeheadwordlastoftypearticlesectionletter{waive}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypepronunciationarticlesectionletter{w}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter{eɪ}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypepronunciationarticlesectionletter{v}}\section*{\needspace {8\baselineskip}{\firstoftypevariantinflectionarticlesectionletter{waives}}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waiving}}\section*{\needspace {8\baselineskip}{\lastoftypevariantinflectionarticlesectionletter{waived}}\sensebeforearticlesectionletter{2.0.4}\sensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{If you }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waive}\definitionfirstoftypelastoftypesensearticlesectionletter{ your right to something, for example legal representation, you choose not to have it or do it.}\exampleusefirstoftypelastoftypesensearticlesectionletter{V n}\examplesensearticlesectionletter{He pleaded guilty to the murders of three boys and waived his right to appeal.}\sensebeforearticlesectionletter{2.0.5}\sensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{If someone }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waives}\definitionfirstoftypelastoftypesensearticlesectionletter{ a rule, they say that people do not have to obey it in a particular situation.}\exampleusefirstoftypelastoftypesensearticlesectionletter{V n}\examplesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
+\sensebeforearticlesectionletter{1.0.0}\sensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{N-Count}\definitionfirstoftypelastoftypesensearticlesectionletter{A }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitress}\definitionfirstoftypelastoftypesensearticlesectionletter{ is a woman who works in a restaurant, serving people with food and drink.}\sensebeforearticlesectionletter{1.0.0}\sensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{A woman who }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waitresses}\definitionfirstoftypelastoftypesensearticlesectionletter{ works in a restaurant serving food and drink.}\examplesensearticlesectionletter{She had been working in a pub, cooking and waitressing.}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{wait}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ress}\firstoftypeheadwordlastoftypefirstoftypelastoftypesubentryarticlesectionletter{ing}\examplefirstoftypelastoftypesubentryarticlesectionletter{She does a bit of waitressing as a part-time job.}\section*{\needspace {8\baselineskip}{\firstoftypeheadwordlastoftypearticlesectionletter{waive}}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypepronunciationarticlesectionletter{w}}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypestressfirstoftypelastoftypepronunciationarticlesectionletter{eɪ}}}\section*{\needspace {8\baselineskip}{\firstoftypelastoftypepronunciationarticlesectionletter{v}}}\section*{\needspace {8\baselineskip}{\firstoftypevariantinflectionarticlesectionletter{waives}}}\section*{\needspace {8\baselineskip}{\variantinflectionarticlesectionletter{waiving}}}\section*{\needspace {8\baselineskip}{\lastoftypevariantinflectionarticlesectionletter{waived}}}\sensebeforearticlesectionletter{2.0.4}\sensearticlesectionletter{1 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{If you }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waive}\definitionfirstoftypelastoftypesensearticlesectionletter{ your right to something, for example legal representation, you choose not to have it or do it.}\exampleusefirstoftypelastoftypesensearticlesectionletter{V n}\examplesensearticlesectionletter{He pleaded guilty to the murders of three boys and waived his right to appeal.}\sensebeforearticlesectionletter{2.0.5}\sensearticlesectionletter{2 }\firstoftypegrammarcategorylastoftypesensearticlesectionletter{Verb}\definitionfirstoftypelastoftypesensearticlesectionletter{If someone }\firstoftypelastoftypewordusedefinitionfirstoftypelastoftypesensearticlesectionletter{waives}\definitionfirstoftypelastoftypesensearticlesectionletter{ a rule, they say that people do not have to obey it in a particular situation.}\exampleusefirstoftypelastoftypesensearticlesectionletter{V n}\examplesensearticlesectionletter{The art gallery waives admission charges on Sundays.}
 
 \end{document}
