--- a/src/Test/XeLatex/TestFiles/Expected/FontWeightBoldRegular.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontWeightBoldRegular.tex
@@ -53,7 +53,7 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{A a}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{A a}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} 
