--- a/src/Test/XeLatex/TestFiles/Expected/GautamiFontTest.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/GautamiFontTest.tex
@@ -122,7 +122,7 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{spacing}{0.916666666666667}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{\underline{అ}}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{\underline{అ}}}}}\end{center}
 \end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
