--- a/src/Test/XeLatex/TestFiles/Expected/HangingIndent.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/HangingIndent.tex
@@ -122,7 +122,7 @@
 \begin{spacing}{0.916666666666667}\begin{center}\begin{center}\widowpenalty=300
 \clubpenalty=300
 
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{అ}}}}\end{center}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{అ}}}}}\end{center}
 \end{center}\end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
@@ -148,7 +148,7 @@
  \end{spacing}\end{multicols}\begin{spacing}{0.916666666666667}\begin{center}\begin{center}\widowpenalty=300
 \clubpenalty=300
 
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{ొ}}}}\end{center}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{\underline{ొ}}}}}\end{center}
 \end{center}\end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.458333333333333}
