--- a/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/HashSymbol.tex
@@ -61,7 +61,7 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{center}
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{అ}}}\end{center}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\letterletHeaddicBody{అ}}}}\end{center}
 
 \hangindent= 36pt
 \hangafter=1
