--- a/src/Test/XeLatex/TestFiles/Expected/PictureWidth.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/PictureWidth.tex
@@ -92,7 +92,7 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{C c}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{C c}}}}\end{center}
 \setlength{\columnsep}{0.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} 
