--- a/src/Test/XeLatex/TestFiles/Expected/TOCLetters.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/TOCLetters.tex
@@ -31,8 +31,8 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{D d}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{D d}}}}\end{center}
 \begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{E e}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{E e}}}}\end{center}
 
 \end{document}
