--- a/src/Test/XeLatex/TestFiles/Expected/inputcasefw83alpha.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/inputcasefw83alpha.tex
@@ -761,7 +761,7 @@
 \begin{spacing}{0.916666666666667}\begin{center}\begin{spacing}{0.5}\begin{center}\widowpenalty=300
 \clubpenalty=300
 
-\section*{\needspace {8\baselineskip}{\topskip 18pt{\rightmargin 9pt{\letterletHead{\underline{W w}}}}}\end{center}\end{spacing}
+\section*{\needspace {8\baselineskip}{\topskip 18pt{\rightmargin 9pt{\letterletHead{\underline{W w}}}}}}\end{center}\end{spacing}
 \end{center}\end{spacing}\setlength{\columnsep}{12pt} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}\begin{spacing}{0.458333333333333}{\raggedright} \begin{spacing}{0.5}
