--- a/src/Test/XeLatex/TestFiles/Expected/FlexRev.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FlexRev.tex
@@ -100,7 +100,7 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 \begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{अ}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{अ}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -144,7 +144,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody अड़सठ}{ \spanhireversalformLehientryletDatadicBody अड़सठ}\spanhireversalformLehientryletDatadicBody{अड़सठ} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అట్టెసాట్} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అట్టెసాట్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aṭṭesāṭ}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{num} \spanhidefinitionLehisensesentryletDatadicBody{अड़सठ} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{అట్టె సాట్న రెండు పుస్తక్ యేత్‌తొన్.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{आ}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{आ}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -152,7 +152,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody आडा}{ \spanhireversalformLehientryletDatadicBody आडा}\spanhireversalformLehientryletDatadicBody{आडा} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అడ్డమ్} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అడ్డమ్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aḍḍam}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{adv} \spanhidefinitionLehisensesentryletDatadicBody{आडा} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{పోడ్దున్ అడ్డమ్ టెప్ప ఆత.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{इ}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{इ}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -160,7 +160,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody इसी दौरान}{ \spanhireversalformLehientryletDatadicBody इसी दौरान}\spanhireversalformLehientryletDatadicBody{इसी दौरान} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అచ్చోడ్ రొప్పొ} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అచ్చోడ్ రొప్పొ} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{accōḍ roppo}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]}\spanenprimaryrefssensesentryletDatadicBody{ (}\spanenLexEntryTypepublishAbbreviationForReversalAbbreviationPubencomplexformentrytypecomplexformprimaryrefssensesentryletDatadicBody{der. of} \mainentryrefggoTeluINacomplexformcomponentscomplexformprimaryrefssensesentryletDatadicBody{అచ్చొర్}\spanenprimaryrefssensesentryletDatadicBody{)} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{adv} \spanhidefinitionLehisensesentryletDatadicBody{इसी दौरान} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{బుయరితగ అచ్చొడ్ రొప్పొ నేంగ్మా.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ग}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ग}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -168,7 +168,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody ग्यारह}{ \spanhireversalformLehientryletDatadicBody ग्यारह}\spanhireversalformLehientryletDatadicBody{ग्यारह} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అక్ర} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అక్ర} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{akra}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{num} \spanhidefinitionLehisensesentryletDatadicBody{ग्यारह} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{నాకున్ అక్ర హెర్రెంగ్ మంతంగ్.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{च}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{च}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -176,7 +176,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody चिउडा}{ \spanhireversalformLehientryletDatadicBody चिउडा}\spanhireversalformLehientryletDatadicBody{चिउडा} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అట్కుల్క్} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అట్కుల్క్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aṭkulk}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{n} \spanhidefinitionLehisensesentryletDatadicBody{चिउडा} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{పెరెక్ ఙల్ అట్కుల్క్ తయర్ కీంతెర్.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ट}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ट}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -184,7 +184,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody टाँगना}{ \spanhireversalformLehientryletDatadicBody टाँगना}\spanhireversalformLehientryletDatadicBody{टाँगना} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అట్కీ కీత}\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody{ 2} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అట్కి కీ} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aṭki kī-}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{n} \spanhidefinitionLehisensesentryletDatadicBody{टाँगना} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{నావ ఆంగ్డెతున్ మోలతగ అట్కి కీతొన్.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{त}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{त}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -192,7 +192,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody तात}{ \spanhireversalformLehientryletDatadicBody तात}\spanhireversalformLehientryletDatadicBody{तात} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అక్కొ మామల్} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అక్కొ మామల్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{akko}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{n} \spanhidefinitionLehisensesentryletDatadicBody{तात; नानादादा; बूढा आदमी} \spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody{మావొర్ అక్కొ డగుర్.} \spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody{అక్కొ చుట్ట ఉంజెర్ మంతొర్.} \spanencomplexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody{der.} \complexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody{అక్కొ మామల}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{न}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{न}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -200,7 +200,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody नानादादा}{ \spanhireversalformLehientryletDatadicBody नानादादा}\spanhireversalformLehientryletDatadicBody{नानादादा} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అక్కొ మామల్} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అక్కొ మామల్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{akko}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{n} \spanhidefinitionLehisensesentryletDatadicBody{तात; नानादादा; बूढा आदमी} \spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody{మావొర్ అక్కొ డగుర్.} \spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody{అక్కొ చుట్ట ఉంజెర్ మంతొర్.} \spanencomplexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody{der.} \complexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody{అక్కొ మామల}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ब}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ब}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -220,7 +220,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody बूढा आदमी}{ \spanhireversalformLehientryletDatadicBody बूढा आदमी}\spanhireversalformLehientryletDatadicBody{बूढा आदमी} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అక్కొ మామల్} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అక్కొ మామల్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{akko}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{n} \spanhidefinitionLehisensesentryletDatadicBody{तात; नानादादा; बूढा आदमी} \spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody{మావొర్ అక్కొ డగుర్.} \spanggoTeluINexampleggoTeluINxitemexamplessensesentryletDatadicBody{అక్కొ చుట్ట ఉంజెర్ మంతొర్.} \spanencomplexformrefentrytypecomplexformrefcomplexformrefssensesentryletDatadicBody{der.} \complexformrefheadwordggoTeluINcomplexformrefcomplexformrefssensesentryletDatadicBody{అక్కొ మామల}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{भ}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{भ}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -228,7 +228,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody भाबि}{ \spanhireversalformLehientryletDatadicBody भाबि}\spanhireversalformLehientryletDatadicBody{भाबि} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అఙె} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అఙె} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aṅe}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{n} \spanhidefinitionLehisensesentryletDatadicBody{भाबि} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{మావొర్ దాదన బాయ్కొ నాకున్ అఙె ఆంత.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{म}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{म}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -236,7 +236,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody मना कर}{ \spanhireversalformLehientryletDatadicBody मना कर}\spanhireversalformLehientryletDatadicBody{मना कर} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అడ్డమ్ ఆ}\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody{ 2} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అడ్డమ్ ఆ} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aḍḍam ā-}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{v} \spanhidefinitionLehisensesentryletDatadicBody{रोक; मना कर} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{నిమ్మె దర్బర్‌తె అడ్డమ్ అస్సి వడ్క్‌మా.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{र}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{र}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -244,7 +244,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody रोक}{ \spanhireversalformLehientryletDatadicBody रोक}\spanhireversalformLehientryletDatadicBody{रोक} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అడ్డమ్ ఆ}\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody{ 1} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అడ్డమ్ ఆ} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aḍḍam ā-}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{v} \spanhidefinitionLehisensesentryletDatadicBody{रोक; बीच में पड} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{బాబల్ బయ్యెన్ పానెకె కాండి అడ్డమ్ ఆతొర్.}\spanensensesentryletDatadicBody{; }\revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అడ్డమ్ ఆ}\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody{ 2} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అడ్డమ్ ఆ} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aḍḍam ā-}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{v} \spanhidefinitionLehisensesentryletDatadicBody{रोक; मना कर} \spanggoTeluINexampleggoTeluINexamplessensesentryletDatadicBody{నిమ్మె దర్బర్‌తె అడ్డమ్ అస్సి వడ్క్‌మా.}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{व}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{व}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -260,7 +260,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody वहा से}{ \spanhireversalformLehientryletDatadicBody वहा से}\spanhireversalformLehientryletDatadicBody{वहा से} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అగ్గటల్}\SenseReferenceNumberenheadrefggoTeluINsensesentryletDatadicBody{ 1} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అగ్గటల్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{aggaṭal}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{adv} \spanhidefinitionLehisensesentryletDatadicBody{वहा से}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{स}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{स}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
@@ -268,7 +268,7 @@
 \hangafter=1
 \markboth{ \spanhireversalformLehientryletDatadicBody साधारण}{ \spanhireversalformLehientryletDatadicBody साधारण}\spanhireversalformLehientryletDatadicBody{साधारण} \revsensenumberggoTeluINheadrefggoTeluINsensesentryletDatadicBody{అచొట్క్} \spanggoTeluINmorphformggoTeluINsensesentryletDatadicBody{అచొట్క్} \spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{[}\spanggofonipaxemicpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{acoṭk}\spanenpronunciationformggofonipaxemicpronunciationpronunciationssensesentryletDatadicBody{]} \spanenpartofspeechLehigrammaticalinfosensesentryletDatadicBody{n} \spanhidefinitionLehisensesentryletDatadicBody{साधारण}\end{spacing}
  \end{multicols}\begin{center}
-\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ह}}}\end{center}
+\topskip 18pt{\section*{\needspace {8\baselineskip}{\letterletHeaddicBody{ह}}}}\end{center}
 \setlength{\columnsep}{1.5em} 
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedright} \begin{spacing}{1.5}
