TD-4708 Fixed the reversal entry

--- a/src/Test/XeLatex/TestFiles/Expected/MissingCurlyBracesTest.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/MissingCurlyBracesTest.tex
@@ -143,12 +143,12 @@
 \font\translationstes="Charis SIL AmArea/GR/I":color=808000 at 12pt
 \font\spanheadwordconfigtargetconfigtargets="Charis SIL AmArea/GR" at 12pt
 \font\letHeaddicBody="Charis SIL AmArea/GR/B" at 12pt
-\font\lettermxbletHeaddicBody="Charis SIL AmArea/GR/B" at 18pt
+\font\lettermxbletHeaddicBody="Charis SIL AmArea/GR/B":color=000080 at 10pt
 \font\letDatadicBody="Charis SIL AmArea/GR" at 12pt
 \font\entryletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\mainheadwordentryletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
-\font\spanmxbmainheadwordentryletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 11pt
-\font\aspanmxbmainheadwordentryletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 11pt
+\font\spanmxbmainheadwordentryletDatadicBody="Charis SIL AmArea/GR/B":color=000080 at 10pt
+\font\aspanmxbmainheadwordentryletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 10pt
 \font\spanmainheadwordentryletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 11pt
 \font\homographnumberentryletDatadicBody="Charis SIL AmArea/GR/B":color=008000 at 6.96pt
 \font\spanhomographnumberentryletDatadicBody="Charis SIL AmArea/GR/B":color=008000 at 10pt
@@ -156,7 +156,7 @@
 \font\sharedgrammaticalinfosensesentryletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\morphosyntaxanalysissharedgrammaticalinfosensesentryletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\partofspeechmorphosyntaxanalysissharedgrammaticalinfosensesentryletDatadicBody="Charis SIL AmArea/GR/I":color=800000 at 12pt
-\font\spanespartofspeechmorphosyntaxanalysissharedgrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
+\font\spanespartofspeechmorphosyntaxanalysissharedgrammaticalinfosensesentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\spanspanespartofspeechmorphosyntaxanalysissharedgrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
 \font\spanpartofspeechmorphosyntaxanalysissharedgrammaticalinfosensesentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
 \font\sensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 12pt
@@ -179,11 +179,11 @@
 \font\spanspanestranslationtranslationcontenttranslationcontentsexamplescontentexamplescontentssensesensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\spantranslationtranslationcontenttranslationcontentsexamplescontentexamplescontentssensesensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\spanesspanestranslationtranslationcontenttranslationcontentsexamplescontentexamplescontentssensesensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
-\font\translationstesspanestranslationtranslationcontenttranslationcontentsexamplescontentexamplescontentssensesensecontentsensesentryletDatadicBody="Charis SIL/GR/I":color=808000 at 10pt
+\font\translationstesspanestranslationtranslationcontenttranslationcontentsexamplescontentexamplescontentssensesensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\minorentryvariantletDatadicBody="Charis SIL/GR":color=008000 at 12pt
 \font\headwordminorentryvariantletDatadicBody="Charis SIL/GR":color=0000FF at 12pt
-\font\spanmxbheadwordminorentryvariantletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 11pt
-\font\aspanmxbheadwordminorentryvariantletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 11pt
+\font\spanmxbheadwordminorentryvariantletDatadicBody="Charis SIL AmArea/GR/B":color=000080 at 10pt
+\font\aspanmxbheadwordminorentryvariantletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 10pt
 \font\spanheadwordminorentryvariantletDatadicBody="Charis SIL AmArea/GR/B":color=0000FF at 11pt
 \font\visiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\spanvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR":color=008000 at 10pt
@@ -191,12 +191,12 @@
 \font\variantentrytypesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\variantentrytypevariantentrytypesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\reverseabbrvariantentrytypevariantentrytypesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
-\font\spanesreverseabbrvariantentrytypevariantentrytypesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
+\font\spanesreverseabbrvariantentrytypevariantentrytypesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\spanreverseabbrvariantentrytypevariantentrytypesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
 \font\referencedentriesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL/GR":color=008000 at 12pt
 \font\referencedentryreferencedentriesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL/GR":color=008000 at 12pt
 \font\headwordreferencedentryreferencedentriesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL/GR":color=0000FF at 12pt
-\font\spanmxbheadwordreferencedentryreferencedentriesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR/I":color=800000 at 10pt
+\font\spanmxbheadwordreferencedentryreferencedentriesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR/B":color=000080 at 10pt
 \font\spanspanmxbheadwordreferencedentryreferencedentriesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR/I":color=800000 at 10pt
 \font\spanheadwordreferencedentryreferencedentriesvisiblevariantentryrefvisiblevariantentryrefsminorentryvariantletDatadicBody="Charis SIL AmArea/GR/I":color=800000 at 10pt
 \font\summarydefinitionminorentryvariantletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
@@ -205,7 +205,7 @@
 \font\spansummarydefinitionminorentryvariantletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\morphosyntaxanalysissensesensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 12pt
 \font\partofspeechmorphosyntaxanalysissensesensecontentsensesentryletDatadicBody="Charis SIL/GR/I":color=800000 at 12pt
-\font\spanespartofspeechmorphosyntaxanalysissensesensecontentsensesentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
+\font\spanespartofspeechmorphosyntaxanalysissensesensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\spanspanespartofspeechmorphosyntaxanalysissensesensecontentsensesentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
 \font\spanpartofspeechmorphosyntaxanalysissensesensecontentsensesentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
 \font\definitionsensesensecontentsensesentryletDatadicBody="Charis SIL/GR":color=008000 at 12pt
@@ -239,7 +239,7 @@
 \font\variantentrytypesvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL/GR":color=008000 at 12pt
 \font\variantentrytypevariantentrytypesvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL/GR":color=008000 at 12pt
 \font\abbreviationvariantentrytypevariantentrytypesvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL/GR":color=008000 at 12pt
-\font\spanesabbreviationvariantentrytypevariantentrytypesvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
+\font\spanesabbreviationvariantentrytypevariantentrytypesvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\spanabbreviationvariantentrytypevariantentrytypesvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
 \font\headwordvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL/GR":color=0000FF at 12pt
 \font\spanmxbheadwordvariantformentrybackrefvariantformentrybackrefsentryletDatadicBody="Charis SIL AmArea/GR/B":color=000080 at 10pt
@@ -249,7 +249,7 @@
 \font\variantentrytypesvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\variantentrytypevariantentrytypesvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
 \font\abbreviationvariantentrytypevariantentrytypesvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL AmArea/GR":color=008000 at 12pt
-\font\spanesabbreviationvariantentrytypevariantentrytypesvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
+\font\spanesabbreviationvariantentrytypevariantentrytypesvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL/GR":color=008000 at 10pt
 \font\spanabbreviationvariantentrytypevariantentrytypesvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL/GR/I":color=800000 at 10pt
 \font\headwordvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL/GR":color=0000FF at 12pt
 \font\spanmxbheadwordvariantformentrybackrefbvariantformentrybackrefsbentryletDatadicBody="Charis SIL AmArea/GR/B":color=000080 at 10pt
