--- a/src/Test/XeLatex/TestFiles/Expected/Bidi.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/Bidi.tex
@@ -35,9 +35,9 @@
 \font\xitemxitemlexreftargetsbefore="Times New Roman/GR" at 12pt
 \font\letDatadicBody="Times New Roman/GR" at 12pt
 \font\entryletDatadicBody="Times New Roman/GR" at 12pt
-\font\headwordurentryletDatadicBody="Scheherazade Graphite Alpha/GR/B" at 12pt
-\font\xhomographnumberheadwordurentryletDatadicBody="Scheherazade Graphite Alpha/GR/B" at 6.6pt
-\font\spanenheadwordurentryletDatadicBody="Times New Roman/GR/B" at 12pt
+\font\headwordurentryletDatadicBody="Scheherazade Graphite Alpha/GR/B":color=ff0000 at 12pt
+\font\xhomographnumberheadwordurentryletDatadicBody="Scheherazade Graphite Alpha/GR/B":color=ff0000 at 6.6pt
+\font\spanenheadwordurentryletDatadicBody="Times New Roman/GR/B":color=ff0000 at 12pt
 \font\sensesentryletDatadicBody="Times New Roman/GR" at 12pt
 \font\sensesensesentryletDatadicBody="Times New Roman/GR" at 12pt
 \font\grammaticalinfosensesensesentryletDatadicBody="Times New Roman/GR/I" at 12pt
@@ -61,7 +61,7 @@
 \setlength\columnseprule{0.4pt} 
 \begin{multicols}{2}{\raggedleft} \begin{spacing}{1.5}
 \hangindent= 12pt
-\hangafter=1
-\markboth{ \headwordurentryletDatadicBody -0}{ \headwordurentryletDatadicBody -0}\headwordurentryletDatadicBody{-0}\xhomographnumberheadwordurentryletDatadicBody{$_{1}$} \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{Vst} \spanenslotsgrammaticalinfosensesensesentryletDatadicBody{: }\spanenslotnameenslotsgrammaticalinfosensesensesentryletDatadicBody{Asp} \spanendefinitionensensesensesentryletDatadicBody{PERF} \end{spacing}
+\hangafter=1\RL{
+\markboth{ \headwordurentryletDatadicBody -0}{ \headwordurentryletDatadicBody -0}\headwordurentryletDatadicBody{-0}\xhomographnumberheadwordurentryletDatadicBody{$_{1}$} } \spanenpartofspeechengrammaticalinfosensesensesentryletDatadicBody{Vst} \spanenslotsgrammaticalinfosensesensesentryletDatadicBody{: }\spanenslotnameenslotsgrammaticalinfosensesensesentryletDatadicBody{Asp} \spanendefinitionensensesensesentryletDatadicBody{PERF} \end{spacing}
  \end{multicols}
 \end{document}
